--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "nouislider": "^15.6.0",
     "preact": "^10.5.15"
   },
   "devDependencies": {
