pre slider file

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "nouislider": "^15.6.0",
-    "preact": "^10.5.15"
+    "preact": "^10.5.15",
+    "wnumb": "^1.2.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
