--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite --open",
     "buildts": "tsc && vite build",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --ui",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "nouislider": "^15.6.0",
@@ -15,9 +18,16 @@
     "wnumb": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@preact/preset-vite": "^2.1.5",
+    "@testing-library/preact": "^3.2.2",
+    "@vitest/ui": "^0.22.1",
+    "babel-loader": "^8.2.5",
+    "core-js": "^3.24.1",
+    "jsdom": "^20.0.0",
+    "simple-statistics": "7.7.5",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0",
-    "simple-statistics": "7.7.5"
+    "vite": "3.0.8",
+    "vitest": "^0.22.1"
   }
 }
